2009-08-04  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Update to 0.99.4, and enable the building on a non-BFU-ed system.
	  This is currently done using actual binaries, but this should become
	  unnecessary post-integration.
	* Makefile.am:
	  Update EXTRA_DIST for libnwam binaries and header changes.
	* SUNWnwam-manager.spec, nwam-manager.spec:
	  Update versions of specs here to match those used for building in a
	  normal desktop build environment - good the check them in somewhere
	  for now.
	* common/libnwamui.c, common/nwamui_ncu.c, common/nwamui_ncu.h,
	  common/nwamui_wifi_net.c, daemon/notify.c,
	  daemon/nwam-tooltip-widget.c, daemon/status_icon.c, tests/main.c: 
	  Update these for the removal of the references to the NWAM tunnels,
	  at the moment it's all #ifdef-ed out rather than total removal since
	  it's likely to be required quite soon after integration.
	* nwam_core/copy_onnv_headers.sh, nwam_core/lib/i386/libnwam.so,
	  nwam_core/lib/i386/libnwam.so.1, nwam_core/lib/sparc/libnwam.so,
	  nwam_core/lib/sparc/libnwam.so.1, nwam_core/usr/include/sys/dl.h,
	  nwam_core/usr/include/sys/dld_ioc.h,
	  nwam_core/usr/include/sys/dlpi.h:
	  Update headers being used, removing some that we no longer require
	  for building. Also added binaries for i386 and sparc to allow
	  building of nwam-manager on non-BFU'ed system.

2009-08-04  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/main.c (main):
	* capplet/nwam_conn_stat_panel.c (nwam_conn_status_panel_init):
	* capplet/nwam_location_dialog.c (nwam_location_dialog_init),
	(location_lock_location_cb_toggled),
	(location_activate_best_location_btn_clicked),
	(prof_lock_current_loc):
	* capplet/nwam_net_conf_panel.c:
	* common/nwamui_prof.c (nwamui_prof_class_init),
	(nwamui_prof_init), (nwamui_prof_set_property),
	(nwamui_prof_get_property), (nwamui_prof_finalize),
	(gconf_notify_cb), (nwamui_prof_get_instance),
	(nwamui_prof_notify_begin):
	* daemon/main.c (join_wifi_not_in_fav), (join_any_fav_wifi),